--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,7 +9,7 @@ on:
       app_url:
         description: 'Application URL to validate'
         required: true
-        default: 'https://helloworld.twistedlife.space'
+        default: 'https://retirewise.twistedlife.space'
 
 jobs:
   validate-deployment:
@@ -24,34 +24,37 @@ jobs:
       
       - name: Validate Homepage Availability
         run: |
-          URL="${{ github.event.inputs.app_url || 'https://helloworld.twistedlife.space' }}"
+          URL="${{ github.event.inputs.app_url || 'https://retirewise.twistedlife.space' }}"
           echo "Validating deployment at: $URL"
-          
+
           STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" "$URL")
-          
+
           if [ "$STATUS_CODE" -eq 200 ]; then
             echo "✓ Homepage is accessible (HTTP $STATUS_CODE)"
           else
             echo "✗ Homepage returned unexpected status: HTTP $STATUS_CODE"
             exit 1
           fi
-      
-      - name: Test API Endpoint
+
+      - name: Test API Auth Endpoint
         run: |
-          URL="${{ github.event.inputs.app_url || 'https://helloworld.twistedlife.space' }}"
-          API_URL="${URL}/api/greetings"
-          
+          URL="${{ github.event.inputs.app_url || 'https://retirewise.twistedlife.space' }}"
+          API_URL="${URL}/api/auth/login"
+
           echo "Testing API endpoint: $API_URL"
-          
-          RESPONSE=$(curl -s -w "\n%{http_code}" "$API_URL")
+
+          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST "$API_URL" \
+            -H "Content-Type: application/json" \
+            -d '{"email":"healthcheck@test.local","name":"Health Check"}')
           STATUS_CODE=$(echo "$RESPONSE" | tail -n1)
           BODY=$(echo "$RESPONSE" | sed '$d')
-          
-          if [ "$STATUS_CODE" -eq 200 ]; then
+
+          if [ "$STATUS_CODE" -eq 200 ] || [ "$STATUS_CODE" -eq 201 ]; then
             echo "✓ API endpoint is responding (HTTP $STATUS_CODE)"
             echo "Response: $BODY"
           else
             echo "✗ API endpoint returned unexpected status: HTTP $STATUS_CODE"
+            echo "Response: $BODY"
             exit 1
           fi
       
